# ecg-classif

./: .gitignore  README.md  TASKS.md  mlflow.db  pyproject.toml  ruff.toml  slides.typ
data/processed/: asymmetry_features.pkl  features.pkl  gradient_features.pkl  graph_topology_features.pkl  ratio_features.pkl  selected_features.pkl
notebooks/: contrast.ipynb  examples.ipynb  fusion.ipynb
scripts/: generate_features.py  inspect_data.py  regional_rf_anova.py  sweep.py
