[project]
name = "ecg-classif"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jaxtyping>=0.3.5",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mlflow>=3.8.1",
    "networkx>=3.6.1",
    "numpy>=2.4.1",
    "optuna>=4.7.0",
    "scikit-learn>=1.8.0",
    "scipy>=1.17.0",
    "seaborn>=0.13.2",
]
